<resources>
    <string name="app_name">Shopping List</string>

    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="select">Select</string>

    <string name="product_name">Product name</string>
    <string name="quantity">Quantity</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>

    <string name="txt_select_date">Shopping List</string>

    <string name="txt_add_new_item">Add New Item</string>
    <string name="txt_save">Add and Save</string>
    <string name="txt_save_date_time">Save</string>
    <string name="date_and_time_updated">Date and Time updated</string>

    <string name="please_fill_all_details">Please fill all details</string>
    <string name="the_item_updated">The item updated</string>
    <string name="new_item_added_to_the_list">New item added to the list</string>
    <string name="the_item_already_exist">The item already exist</string>
    <string name="reminder_shopping_list">Reminder Shopping List</string>
    <string name="you_have_to_go_to_shop_at">You have to go to shop at:</string>

    <string name="notifications">Notifications</string>


    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="remove_item">Remove item from list ?</string>


    <string name="txt_title_add_new_item">New Item</string>
    <string name="txt_item_name">Name:</string>
    <string name="txt_item_quantity">Quantity:</string>

    <string name="settings">Settings</string>
    <string name="notification">Allow remind notification?</string>
    <string name="notificationAlways">Show always notification</string>
    <string name="exit">Exit</string>

    <string name="time_to_notification">Remind hours before</string>
    <string name="Please_fill_all_details">Please fill all details</string>


</resources>