<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/notifications">

    </PreferenceCategory>
    <SwitchPreference
        android:id="@+id/remember_notification"
        android:defaultValue="false"
        android:key="remember"
        android:title="@string/notification" />
    <ListPreference
        android:id="@+id/listOfHoursPreference"
        android:defaultValue="1"
        android:entries="@array/hours_entries"
        android:entryValues="@array/hours_values"
        android:key="listOfHoursPreference"
        android:enabled="false"
        android:title="@string/time_to_notification" />
    <CheckBoxPreference
        android:id="@+id/showAllWays"
        android:defaultValue="false"
        android:key="showAllWays"
        android:title="@string/notificationAlways" />

</PreferenceScreen>