<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivityLayoutID"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/top_container"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="-7dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="7dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="233dp"
                android:layout_marginBottom="33dp"
                android:layout_toEndOf="@+id/textView4"
                android:hint="@string/select"
                android:textColorHint="#D32F2F"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="33dp"
                android:layout_weight="1"
                android:text="@string/date"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="204dp"
                android:layout_marginBottom="33dp"
                android:text="@string/time"

                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="254dp"
                android:layout_marginBottom="33dp"
                android:hint="@string/select"
                android:textColorHint="#D32F2F"
                android:textSize="18sp" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="60dp"
                android:background="#ff2d57" />

            <Button
                android:id="@+id/btnSaveDateAndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/tvTime"
                android:text="@string/txt_save_date_time"
                android:textAllCaps="false"
                android:visibility="invisible" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/second_container"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="80dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="11dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="21dp"
                android:layout_weight="1"
                android:text="@string/product_name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="326dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="22dp"
                android:layout_weight="1"
                android:text="@string/remove"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="49dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="272dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="21dp"
                android:layout_weight="1"
                android:text="@string/edit"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="42dp"
                android:layout_marginBottom="20dp"
                android:layout_toEndOf="@+id/textView2"
                android:layout_weight="1"
                android:text="@string/quantity"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_view"
            android:layout_width="match_parent"
            android:layout_height="525dp"
            android:layout_below="@+id/top_container"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="80dp">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/btnAddNewButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="175dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/additem"
            android:textAllCaps="false"
            tools:ignore="SpeakableTextPresentCheck" />


    </RelativeLayout>

</LinearLayout>