<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">

    <Button
        android:id="@+id/btnAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="29dp"
        android:text="@string/txt_save"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="165dp"
        android:layout_marginTop="36dp"
        android:text="@string/txt_title_add_new_item"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="121dp"
        android:layout_toEndOf="@+id/textView6"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="66dp"
        android:text="@string/txt_item_quantity"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/editTextQuantity"
        android:layout_width="47dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextName"
        android:layout_marginStart="17dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="9dp"
        android:layout_toStartOf="@+id/button_add"
        android:layout_toEndOf="@+id/textView7"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:inputType="number"
        android:text="1"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="134dp"
        android:text="@string/txt_item_name"
        android:textSize="18dp" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="213dp"
        android:layout_marginEnd="162dp"
        android:background="@drawable/plus"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button_down"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="94dp"
        android:background="@drawable/minus"
        tools:ignore="SpeakableTextPresentCheck" />

</RelativeLayout>